Comments on comment/rating form submission process

--- a/resumes/templates/resumes/details.html
+++ b/resumes/templates/resumes/details.html
@@ -27,18 +27,37 @@
 <p>{{ rating.value }}</p>
 {% endfor %}
 
-<form id="commentForm" method="post" action="{% url 'details' resume_id=resume.id %}" data-resume-id="{{ resume.id }}" enctype="multipart/form-data">
+
+<!--
+When this form is submitted, a POST request is made to the URL specified in the action attribute
+Example: When resume.id == 1, action="details/1/"
+This POST request is sent to that URL. The URL forwards the information to the corresponding view
+as defined in resumes/urls.py, which is resumes/views.py -> details()
+-->
+<form id="commentForm"
+    method="post"
+    action="{% url 'details' resume_id=resume.id %}"
+    enctype="multipart/form-data">
+
     {% csrf_token %}
     {{ comment_form.as_p }}
+
+    <!-- Since there are multiple forms on this page, this hidden input field is used to identify the form
+    once the form information is sent to the backend. -->
     <input type="hidden" name="form_type" value="comment_form">
-    <button type="submit" name="comment_form">Submit</button>
+    <button type="submit">Submit</button>
 </form>
 
-<form id="ratingForm" method="post" action="{% url 'details' resume_id=resume.id %}" data-resume-id="{{ resume.id }}" enctype="multipart/form-data">
+<form id="ratingForm"
+    method="post"
+    action="{% url 'details' resume_id=resume.id %}"
+    enctype="multipart/form-data">
+
     {% csrf_token %}
     {{ rating_form.as_p }}
+    
     <input type="hidden" name="form_type" value="rating_form">
-    <button type="submit" name="rating_form">Submit</button>
+    <button type="submit">Submit</button>
 </form>
 
 {% endblock %}
