comment pagination decent

--- a/resumes/templates/resumes/details.html
+++ b/resumes/templates/resumes/details.html
@@ -21,7 +21,7 @@
 
 <div id="comment-section">
 {% for comment in comments %}
-    <div class="card" style="width: 18rem;">
+    <div class="card">
         <div class="card-body">
         <h6 class="card-subtitle mb-2 text-muted">{{ comment.user }}</h6>
         <p class="card-text">{{ comment.text }}</p>
