--- a/resumes/static/resumes/details.css
+++ b/resumes/static/resumes/details.css
@@ -1,3 +1,10 @@
+.card {
+    margin: 5px 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    align-content: center;
+}
 .comment-section {
     display: grid;
     gap: 20px;
@@ -12,6 +19,14 @@ p, h2 {margin: 0;}
 .pagination {
     text-align: center;
     margin-top: 20px;
+}
+
+.page-buttons-group {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .pagination button {
@@ -37,4 +52,3 @@ p, h2 {margin: 0;}
     background-color: #007bff;
     color: white;
 }
-
