--- a/resumes/static/resumes/details.css
+++ b/resumes/static/resumes/details.css
@@ -1,8 +1,29 @@
+@media (max-width: 1100px) {
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+    .col-md-6 {
+        width: 100%; /* Make each column take up the full width */
+    }
+}
+.container {
+    width: 100%
+}
+
+
+#embedded_pdf {
+    width:100%;
+}
+
+#resume_plus_comments {
+
+}
+
 .card {
     margin: 5px 0;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
     align-content: center;
 }
 .comment-section {
