--- a/resumes/templates/resumes/details.html
+++ b/resumes/templates/resumes/details.html
@@ -61,6 +61,7 @@ as defined in resumes/urls.py, which is resumes/views.py -> details()
     <button type="submit">Submit</button>
 </form>
 
+<!-- See https://codepen.io/vsync/pen/mdEJMLv for a good slider design -->
 <form id="ratingForm"
     method="post"
     action="{% url 'details' resume_id=resume.id %}"
