--- a/resumes/static/resumes/details.css
+++ b/resumes/static/resumes/details.css
@@ -1,19 +1,15 @@
-@media (max-width: 1100px) {
-    .row {
-        display: flex;
-        flex-direction: column;
-    }
-    .col-md-6 {
-        width: 100%; /* Make each column take up the full width */
-    }
-}
-.container {
-    width: 100%
+
+.container-fluid {
+    margin: 0px 0px;
+    width: 100%;
 }
 
-#embedded_pdf {
-    width:100%;
-    height:100%
+.col-md-8 {
+    max-width: 800px;
+}
+
+.col-md-4 {
+    padding-left: 30px;
 }
 
 .card {
@@ -22,17 +18,6 @@
     margin-right: auto;
     align-content: center;
 }
-
-.comment-section {
-    display: grid;
-    gap: 20px;
-    margin: 0;
-    list-style: none;
-    padding: 20px;
-    background-color: transparent
-}
-
-p, h2 {margin: 0;}
 
 .pagination {
     text-align: center;
