--- a/resumes/static/resumes/index.css
+++ b/resumes/static/resumes/index.css
@@ -5,3 +5,11 @@
 a:hover {
     text-decoration: none;
   }
+
+.zoom-box {
+    transition: transform .2s
+}
+
+.zoom-box:hover {
+    transform: scale(1.05);
+  }
