--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -13,9 +13,9 @@
 {% if forloop.counter0|divisibleby:4 %}
     <div class="row">
 {% endif %}
-        <div class="col-md-4">
+        <div class="col-md-3">
             <a href="{% url 'details' resume_id=resume.id %}">
-            <div class="card">
+            <div class="zoom-box card">
                 <div class="card-body">
                     <img class="card-img-top" src="{{ resume.image_data }}" alt="First page of resume" width="auto" height="auto">
                     <h5 class="card-title">{{ resume.name }}</h5>
