--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Log in</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
+            </li>
             {% endif %}
           </ul>
     </nav>
