--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,23 +2,13 @@
 
 {% load static %}
 {% block pageSpecificStaticFiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
-    <script src="{% static 'login.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'signup.css' %}">
+    <script src="{% static 'signup.js' %}"></script>
 {% endblock %}
 
 {% block content %}
-    <h1>Log in</h1>
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to see this page.</p>
-    {% endif %}
-  {% endif %}
-
-  <form method="post" action="{% url 'login' %}">
+<h1>Create an account</h1>
+<form id="signupForm" method="post" action="{% url 'signup' %}">
     {% csrf_token %}
     <label for="username_id"><b>Username</b></label>
     <input id="username_id" type="text" placeholder="Username" name="username" required>
@@ -28,7 +18,6 @@
 
     <!-- <input type="submit" value="login"> -->
     <input type="hidden" name="next" value="{{ next }}">
-    <button type="submit">Login</button>
-  </form>
-
+    <button type="submit">Sign up</button>
+</form>
 {% endblock %}
