--- a/resumes/static/resumes/user.css
+++ b/resumes/static/resumes/user.css
@@ -5,3 +5,14 @@ th, td {
 table {
     width: 100%;
 }
+
+.resume-image-preview {
+    display: none;
+    position: absolute;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+
+    /* 2.5x size of printer paper (8.5in x 11in), where 10px = 1in */
+    width:213px;
+    height:275px;
+}
