--- a/templates/base.html
+++ b/templates/base.html
@@ -20,34 +20,21 @@
     {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <!-- Could replace this with img logo later -->
-                <a class="nav-link" href="{% url 'index' %}">ratemyresume</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Home</a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'user' request.user.id %}">My Resumes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'upload' %}">Upload</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Log out</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Log in</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
-            </li>
-            {% endif %}
-          </ul>
+    <nav class="rmr-navbar">
+
+        <!-- Could replace this with img logo later -->
+        <a class="nav-element" href="{% url 'index' %}">ratemyresume</a>
+        <a class="nav-element" href="{% url 'index' %}">Explore</a> <!-- Later these 2 will link to separate pages-->
+
+        {% if user.is_authenticated %}
+        <a class="nav-element" href="{% url 'user' request.user.id %}">My Resumes</a>
+        <a class="nav-element" href="{% url 'upload' %}">Upload</a>
+        <a class="nav-element nav-element-right" href="{% url 'logout' %}">Log out</a>
+        {% else %}
+        <a class="nav-element nav-element-right" href="{% url 'login' %}">Log in</a>
+        <a class="nav-element nav-element-right" href="{% url 'signup' %}">Sign up</a>
+        {% endif %}
+
     </nav>
 
     <div class="content">
