--- a/static/base.css
+++ b/static/base.css
@@ -7,6 +7,8 @@ nav, ul, li, a {
     background-color: #007bff;
     border-bottom: 5px solid darkgray;
     padding: 0px 20px;
+    /* Don't let page elements get too close to navbar */
+    margin-bottom: 20px;
 }
 
 .nav-element {
