--- a/resumes/static/resumes/upload.css
+++ b/resumes/static/resumes/upload.css
@@ -6,3 +6,29 @@ label, input {
 .content {
     margin: 0% 10%;
 }
+
+input {
+    width: 80%
+}
+
+.warning-box {
+    display: flex;
+    align-items: center;
+    background-color: #ffe344;
+    border: 2px solid lightgrey;
+    border-radius: 5px;
+    padding: 2px;
+}
+
+.warning-box * {
+    /* display: inline-block; */
+}
+
+.warning-symbol {
+    font-size: 30px;
+    padding: 0px 5px;
+}
+
+.warning-text {
+    margin-bottom: 0px;
+}
