--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
         {% if user.is_authenticated %}
         <a class="nav-element" href="{% url 'user' request.user.id %}">My Resumes</a>
         <a class="nav-element" href="{% url 'upload' %}">Upload</a>
+        <a class="nav-element" href="{% url 'groups' %}">Private Groups</a>
         <a class="nav-element nav-element-right" href="{% url 'logout' %}">Log out</a>
         {% else %}
         <a class="nav-element nav-element-right" href="{% url 'login' %}">Log in</a>
