--- a/resumes/templates/resumes/index.html
+++ b/resumes/templates/resumes/index.html
@@ -8,6 +8,11 @@
 
 {% block content %}
     <h1>Welcome to ratemyresume</h1>
+
+{% if not user.is_authenticated %}
+<h1>some promotional content for the site here</h1>
+{% endif %}
+
 {% if resumes %}
 {% for resume in resumes %}
 {% if forloop.counter0|divisibleby:4 %}
@@ -30,6 +35,7 @@
 {% endif %}
 {% endfor %}
 {% else %}
+<!-- Why does it say no resumes are available when I log out? -->
     <p>No resumes are available.</p>
 {% endif %}
 {% endblock %}
